--- a/android/android/app/build.gradle
+++ b/android/android/app/build.gradle
@@ -87,7 +87,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.pomer"
+        applicationId "com.github.uryyyyyyy.pomer"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
