--- a/android/android/app/build.gradle
+++ b/android/android/app/build.gradle
@@ -133,7 +133,8 @@ dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"  // From node_modules
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile 'com.google.firebase:firebase-core:10.0.1'
 }
 
 // Run this once to be able to run the application with BUCK
@@ -145,3 +146,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
 repositories {
     mavenCentral()
 }
+
+apply plugin: 'com.google.gms.google-services'
