--- a/ios/ios/pomer.xcodeproj/xcshareddata/xcschemes/pomer.xcscheme
+++ b/ios/ios/pomer.xcodeproj/xcshareddata/xcschemes/pomer.xcscheme
@@ -99,6 +99,12 @@
             ReferencedContainer = "container:pomer.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-FIRAnalyticsDebugEnabled"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
