--- a/android/android/app/build.gradle
+++ b/android/android/app/build.gradle
@@ -135,6 +135,8 @@ dependencies {
     compile "com.facebook.react:react-native:+"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'com.google.firebase:firebase-core:10.0.1'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.google.android.gms:play-services-auth:10.0.1'
 }
 
 // Run this once to be able to run the application with BUCK
