--- a/android/android/app/build.gradle
+++ b/android/android/app/build.gradle
@@ -137,6 +137,7 @@ dependencies {
     compile 'com.google.firebase:firebase-core:10.0.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.android.gms:play-services-auth:10.0.1'
+    compile 'com.google.android.gms:play-services-tagmanager:10.0.1'
 }
 
 // Run this once to be able to run the application with BUCK
